--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5adb3fa20a.js" crossorigin="anonymous"></script>
 </head>
 <header>
   <nav class="menu">
     <ul>
+      <li><a href="#"><i class="fas fa-home"></i></a></li>
       <li><a href="#">Sobre</a></li>
-      <li><a href="#">Conhecimentos</a></li>
-      <li><a href="#">Contato</a></li>
+      <li><a href="#conhecimentos">Conhecimentos</a></li>
+      <li><a href="#contato">Contato</a></li>
     </ul>
   </nav>
-<div>
+<div class="title" id="title">
     <h1 class="site-title">Mauro Gabriel</h1>
   <h2 class="site-subtitle">Estudante</h2>
 </div>
 </header>
-<section>
+<section id="conhecimentos">
   <div class="portfolio">
   <h2>Conhecimentos</h2>
   <div class="grid">
@@ -40,20 +42,18 @@
   </div></div>
 </section>
 
-<section class="contato">
+<div class="conta">
+<section class="contato" id="contato">
   <h2>Contato</h2>
 	<div class="grid icons">
-    <a target="_blank" href="https://github.com/vanessametonini">
-      Github
-    </a>
-    <a target="_blank" href="https://twitter.com/vanessametonini">
-      twitter
+    <a target="_blank" href="https://github.com/MGBFAS">
+      <i class="fab fa-github"></i>
     </a>
     <a target="_blank" href="https://www.instagram.com/mauro_gabriel21/">
-      Instagram    </a>
-    <a href="mailto:vanessa.tonini@caelum.com.br">
-      email
+      <i class="fab fa-instagram"></i>   </a>
+    <a href="gabrieljackjuntos@gmail.com">
+      <i class="far fa-envelope"></i>
     </a>
-  </div>
+  </div></div>
 </section>
 	
