--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="menu">
     <ul>
       <li><a href="#"><i class="fas fa-home"></i></a></li>
-      <li><a href="#">Sobre</a></li>
+      <li><a href="#sobre">Sobre</a></li>
       <li><a href="#conhecimentos">Conhecimentos</a></li>
       <li><a href="#contato">Contato</a></li>
     </ul>
@@ -56,4 +56,3 @@
     </a>
   </div></div>
 </section>
-	
