--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div></div>
 </section>
 
-<div class="conta">
+
 <section class="contato" id="contato">
   <h2>Contato</h2>
 	<div class="grid icons">
@@ -54,5 +54,5 @@
     <a href="gabrieljackjuntos@gmail.com">
       <i class="far fa-envelope"></i>
     </a>
-  </div></div>
+  </div>
 </section>
